--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-ul {
+ul#navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,11 +6,11 @@ ul {
     background-color: #333;
 }
 
-li {
+ul#navbar > li {
     float: left;
 }
 
-li a {
+ul#navbar > li > a {
     display: block;
     color: white;
     text-align: center;
@@ -18,6 +18,10 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+ul#navbar > li > a.link-tab {
+    color: #89DDFF;
+}
+
+ul#navbar > li > a:hover {
     background-color: #111;
 }
