--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ ul#navbar {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #2B2B2B;
 }
 
 ul#navbar > li {
@@ -12,7 +12,7 @@ ul#navbar > li {
 
 ul#navbar > li > a {
     display: block;
-    color: white;
+    color: #EEFFFF;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -22,6 +22,10 @@ ul#navbar > li > a.link-tab {
     color: #89DDFF;
 }
 
+ul#navbar > li > a#todo-list {
+    color: #F07178;
+}
+
 ul#navbar > li > a:hover {
-    background-color: #111;
+    background-color: #616161;
 }
